# archive-reconstruction-platform

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  tasks.ps1
.github/workflows/: tests.yml
docs/: arc-dedup.js  index.html  sample-threads.js  timeline.html  try.html
docs/evidence/: README.md
docs/evidence/beta/: 003_cold-start-handover-bug.txt  004_cold-start-fix-verified.txt  006_internal-go-for-early-access.txt  007_early-access-cohort-selected.txt  008_consent-onboarding.txt  010_telematics-consent-refresh.txt  018_expanded-beta-opens.txt  019_onboarding-load-spike.txt  021_merge-aggressiveness-tuning.txt  022_referral-waitlist-opens.txt  027_comfort-survey-wave.txt
docs/evidence/engineering/: 002_dataset-expansion-plan.txt  003_baseline-model-benchmarked.txt  004_architecture-review.txt  005_regression-tunnel-false-positives.txt  006_tunnel-dataset-retrain.txt  007_model-frozen-for-validation-rc1.txt  008_quantization-accuracy-check.txt  009_edge-case-hardening-rc2.txt  010_shadow-a-b-vs-production.txt  014_handover-state-machine.txt  016_optimization-recovers-headroom.txt  019_feature-flagged-for-beta.txt  020_release-candidate-cut.txt  021_ota-pipeline-design.txt  023_staged-rollout-flag-service.txt  024_load-test-1m-vehicles.txt  026_region-failover.txt  028_canary-metrics-auto-halt.txt  029_consent-enrollment-flow.txt  032_push-update-available.txt  033_app-store-review-friction.txt  034_beta-build-approved.txt  035_localized-release.txt  036_launch-app-live.txt
docs/evidence/postlaunch/: 001_live-safety-dashboard.txt  002_fleet-metric-holds.txt  004_new-year-traffic-baseline.txt  005_long-tail-intersection-report.txt  006_per-market-metric-split.txt  007_monthly-safety-report.txt  008_comfort-metric-regression-watch.txt  009_disengagement-taxonomy-v2.txt  010_quarter-retro-metrics.txt  012_overpass-mitigation.txt  013_phantom-braking-post-mortem.txt  017_incident-trend-review.txt  019_auto-lane-change-resumes.txt  021_comfort-tuning-experiment.txt  023_auto-lane-change-sim-gauntlet.txt  027_3-1-safety-pre-read.txt
docs/evidence/product/: 001_discovery-kickoff.txt  002_diary-study-launched.txt  003_disengagement-themes.txt  004_trust-handover-model.txt  005_concept-testing-round-1.txt  006_accessibility-research.txt  008_pre-launch-perception-study.txt  010_cluster-hud-concepts.txt  012_handover-animation-prototype.txt  013_sound-design-pass.txt  015_redundant-cue-added.txt  016_design-freeze.txt  024_go-no-go-criteria-published.txt  025_launch-readiness-review-1.txt
docs/evidence/rollout/: 001_rollout-runbook-finalized.txt  002_1-canary-live.txt  003_10-ring.txt  (+18 more)
docs/files/: README.md  cluster_concepts.fig  comfort_survey.csv  dataset_plan.xlsx  dogfood_survey.csv  ota_manifest.json  reg_matrix.xlsx  release_notes.md  roadmap.xlsx  scenario_list.xlsx  support_plan.xlsx  trip_review.fig
docs/img/: README.md
examples/: events.json
examples/archive/: a1_canary_full.txt  a1_canary_mid.txt  a1_canary_open.eml  a2_perception_early.eml  a2_perception_plain.txt  a2_perception_thread.mbox  a3_rollout_open.txt  a3_rollout_runbook.eml  a3_rollout_thread.txt  a4_incident_full.txt  a4_incident_open.eml  a4_incident_tzdup.mbox  c01_perception_early.txt  c01_perception_forward.eml  c01_perception_full.txt  c01_perception_mid.txt  c01_perception_open.eml  c01_perception_tzdup.mbox  c02_canary_early.txt  c02_canary_mid.txt  c02_canary_open.eml  c02_canary_plain.txt  c02_canary_thread.mbox  c02_canary_tzdup.mbox  c03_runbook_early.txt  c03_runbook_forward.eml  c03_runbook_full.txt  c03_runbook_mid.txt  c03_runbook_open.eml  c03_runbook_tzdup.mbox  c04_incident_early.txt  c04_incident_full.mbox  c04_incident_mid.txt  c04_incident_open.eml  c04_incident_tzdup.mbox  c05_localization_early.txt  c05_localization_forward.eml  c05_localization_full.txt  c05_localization_mid.txt  c05_localization_open.eml  (+48 more)
examples/pdf_emails/: canary_go_mobile.eml  safety_case.txt  weekly_sync.mbox
examples/raw_email/: 01_canary_go_no_go.eml  02_runbook_attached.eml  03_perception_signoff.eml  team.mbox
examples/threads/: thread_forward_attachment.txt  thread_forward_noattach.txt  thread_main_full.txt  thread_partial_early.txt  thread_partial_mid.txt  thread_single_open.txt
scripts/: generate_browser_sample.py  generate_example_archive.py  generate_pdf_examples.py  generate_sample_events.py  generate_sample_mailbox.py  generate_sample_raw_email.py
src/arc/: __init__.py  ai.py  bridge.py  cli.py  dedup.py  email_in.py  normalize.py  parse.py  pdf_in.py  store.py  thread.py  timeline.py  web.py
tests/: js-parity-driver.js  run_all.py  test_archive_example.py  test_bridge.py  test_cli.py  test_dedup.py  test_email_in.py  test_js_parity.py  test_organize.py  test_parse_hardening.py  test_pdf_in.py  test_store.py  test_thread.py  test_timeline.py  test_web.py
(+176 files in other folders)
