[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-reconstruction-platform"
version = "1.0.0"
description = "Branch-aware deduplication and self-contained HTML timelines for exported email threads."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Mercedes Milke" }]
keywords = ["email", "threads", "deduplication", "timeline", "mbox"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
# ZERO third-party runtime dependencies for the core — standard library only.
dependencies = []

# Optional extras. The core never requires these; they only enhance one thing:
#   pdf — more robust PDF text extraction (the built-in reader is stdlib-only and
#         best-effort). Install with:  pip install "archive-reconstruction-platform[pdf]"
[project.optional-dependencies]
pdf = ["pypdf>=4"]

[project.scripts]
arc = "arc.cli:main"

[project.urls]
Homepage = "https://github.com/mermilke/archive-reconstruction-platform"
Repository = "https://github.com/mermilke/archive-reconstruction-platform"
Issues = "https://github.com/mermilke/archive-reconstruction-platform/issues"

[tool.setuptools.packages.find]
where = ["src"]
